# asfdk

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI_TOPOGRAPHY.py  NLT-DEV-OTOI.md  README.md  conftest.py  file-structure.md  nltotoi.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: main.yml  publish.yml  sync-governance-public.yml
.nltotoi/.nltotoi/: README.md
.nltotoi/.nltotoi/index/: governance-files.md
.nltotoi/.nltotoi/proposals/: validation-roadmap.md
.nltotoi/.nltotoi/scripts/: validate-governance.sh
.nltotoi/index/: governance-files.md
.nltotoi/scripts/: validate-governance.sh
ISSUE_TEMPLATE/: config.yml  governance-proposal.md
SOPs/: incident-response.md  new-agent-onboarding.md  repo-governance-setup.md
SOPs/SOPs/: repo-governance-setup.md
agents/: nlt-governance-steward.md  nlt-otoi-skill.md  rrt-advocate-skill.md  sleepwalker-skill.md  solidarity-foundation-skill.md  swe-agent.md
docs/: active-threads.md  cloudflare-workers-deployment.md  repo-review-2026-05-29.md  unified_architecture.md
docs/agent-log/: 2026-05-21-codex-repo-specific-governance.md  2026-05-28-claude-governance-restoration.md  README.md
docs/agent-log/handoffs/: 2026-04-21-solidarity-kit-align-e8fb.json  2026-04-25-codex-governance-core-sync-handoff.json  2026-04-28-sf-skills-f1a2.json  2026-04-28-update-deployment-instructions.json  2026-05-02-c9d2.json  2026-05-02-c9d4.json  2026-05-07-a575b854.json
docs/agent-log/registrations/: 2026-04-21-cursor-solidarity-kit-align-e8fb.json  2026-04-24-cursor-remove-aimybox-e8fb.json  2026-04-25-codex-governance-core-sync.json  2026-04-28-copilot-sf-skills-f1a2.json  2026-04-28-copilot-update-deployment-instructions.json  2026-05-02-copilot-c9d2.json  2026-05-02-copilot-c9d4.json  2026-05-07-copilot-a575b854.json
docs/deploy/: quickstart.md
docs/dev/: quickstart.md
hosting/: package-lock.json  package.json
hosting/app/: page.tsx
nlt-otoi/: README.md
rrt-advocate/: AGENTS.md  CLAUDE.md
rrt-advocate/.github/ISSUE_TEMPLATE/: governance-proposal.md
rrt-advocate/.nltotoi/index/: governance-files.md
rrt-advocate/.nltotoi/scripts/: validate-governance.sh
rrt-advocate/docs/: active-threads.md  integration_guide.md
rrt-advocate/docs/agent-log/: README.md
rrt-advocate/src/: rrt_advocate.py
rrt-advocate/src/crisis/assessors/: crisis_assessor.py
rrt-advocate/src/crisis/detectors/: behavioral_layer.py  crisis_detector.py  keyword_layer.py  sentiment_layer.py
rrt-advocate/src/rrt_advocate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rrt-advocate/templates/: agent-registration.json  escalation.md  handoff-record.json  intent-log.md
rrt-advocate/tests/: test_rrt_advocate.py
sleepwalker/: package-lock.json  package.json
src/asfdk/: __init__.py  create_foundation.py  foundation.py  types.py
src/asfdk/integration/: __init__.py  rrt.py  sleepwalker.py  toi_otoi.py
templates/: agent-registration.json  escalation.md  handoff-record.json  intent-log.md
tests/: test_index.py
unified_core/: __init__.py  neurolift_foundation.py
unified_core/integration/: rrt_integration.py
workers/: package.json  wrangler.toml
workers/src/: index.ts  nlt-otoi.ts  rrt-advocate.ts  sleepwalker.ts  types.ts
